--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "4684ee71-20c3-4c77-8fc5-ebacc9f0342e"
 authors = ["Luiz Pancini <luizpancini@usp.br"]
 version = "1.0.0-DEV"
 
+[deps]
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+
 [compat]
 julia = "1"
 
