--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -36,6 +36,12 @@ jobs:
           arch: ${{ matrix.arch }}
       - uses: julia-actions/cache@v1
       - uses: julia-actions/julia-buildpkg@v1
+      - name: Print working directory
+        run: pwd
+      - name: List files in the repo
+        run: ls -R 
+      - name: List files in specific directory
+        run: ls -l test/newTestDataGenerators/archUnderDeadPressure/
       - uses: julia-actions/julia-runtest@v1
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v3
