--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,8 @@
 /Manifest.toml
 /docs/Manifest.toml
 /docs/build/
+/test/newTestDataGenerators
+/test/outputs/
+/test/plotGenerators
 /gr-temp
 /.vscode
