--- a/.github/workflows/Documentation.yml
+++ b/.github/workflows/Documentation.yml
@@ -3,7 +3,7 @@ name: Documentation
 on:
   push:
     branches:
-      - main # update to match your development branch (master, main, dev, trunk, ...)
+      - main
     tags: '*'
   pull_request:
 
@@ -19,6 +19,8 @@ jobs:
         with:
           version: '1.6'
       - name: Install dependencies
+        env:
+            PYTHON: ""
         run: julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
       - name: Build and deploy
         env:
