--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -5,3 +5,4 @@ GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
+Suppressor = "fd094767-a336-5f1f-9728-57cf17d0bbfb"
