add LinearInterpolations to documentation .toml

--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -3,6 +3,7 @@ AeroBeams = "4684ee71-20c3-4c77-8fc5-ebacc9f0342e"
 ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
+LinearInterpolations = "b20c7882-2490-4592-a606-fbbfe9e745e8"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
