--- a/Project.toml
+++ b/Project.toml
@@ -20,10 +20,25 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
-Suppressor = "fd094767-a336-5f1f-9728-57cf17d0bbfb"
 
 [compat]
-julia = "1"
+julia = "1.6"
+ColorSchemes = "3"
+DelimitedFiles = "1"
+FFTW = "1"
+FiniteDifferences = "0"
+ForwardDiff = "0"
+GR = "0"
+LinearAlgebra = "1"
+LinearInterpolations = "0"
+Parameters = "0"
+Plots = "1"
+PyPlot = "2"
+QuadGK = "2"
+Random = "1"
+Revise = "3"
+SparseArrays = "1"
+Statistics = "1"
 
 [extras]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
