add upper bound on deps compat

--- a/Project.toml
+++ b/Project.toml
@@ -22,23 +22,23 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
+ColorSchemes = "3 - 4"
+DelimitedFiles = "1 - 2"
+FFTW = "1 - 2"
+FiniteDifferences = "0 - 1"
+ForwardDiff = "0 - 1"
+GR = "0 - 1"
+LinearAlgebra = "1 - 2"
+LinearInterpolations = "0 - 1"
+Parameters = "0 - 1"
+Plots = "1 - 2"
+PyPlot = "2 - 3"
+QuadGK = "2 - 3"
+Random = "1 - 2"
+Revise = "3 - 4"
+SparseArrays = "1 - 2"
+Statistics = "1 - 2"
 julia = "1.6"
-ColorSchemes = "3"
-DelimitedFiles = "1"
-FFTW = "1"
-FiniteDifferences = "0"
-ForwardDiff = "0"
-GR = "0"
-LinearAlgebra = "1"
-LinearInterpolations = "0"
-Parameters = "0"
-Plots = "1"
-PyPlot = "2"
-QuadGK = "2"
-Random = "1"
-Revise = "3"
-SparseArrays = "1"
-Statistics = "1"
 
 [extras]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
