update .toml compat

--- a/Project.toml
+++ b/Project.toml
@@ -25,12 +25,12 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 ColorSchemes = "3 - 4"
 DelimitedFiles = "1 - 2"
 FFTW = "1 - 2"
-FiniteDifferences = "0 - 1"
-ForwardDiff = "0 - 1"
-GR = "0 - 1"
+FiniteDifferences = "0.12, 1"
+ForwardDiff = "0.10, 1"
+GR = "0.73, 1"
 LinearAlgebra = "1 - 2"
-LinearInterpolations = "0 - 1"
-Parameters = "0 - 1"
+LinearInterpolations = "0.1, 1"
+Parameters = "0.12, 1"
 Plots = "1 - 2"
 PyPlot = "2 - 3"
 QuadGK = "2 - 3"
