--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -59,8 +59,10 @@ jobs:
       - name: Install Python dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install python3-pip
-          pip3 install matplotlib
+          sudo apt-get install python3-pip python3-venv
+          python3 -m venv venv
+          source venv/bin/activate
+          pip install matplotlib
       - name: Configure doc environment
         shell: julia --project=docs --color=yes {0}
         run: |
