--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -56,13 +56,11 @@ jobs:
         with:
           version: '1'
       - uses: julia-actions/cache@v2
-      - name: Install Python dependencies
+      - name: Install Python dependencies for PyCall
         run: |
-          sudo apt-get update
-          sudo apt-get install python3-pip python3-venv
-          python3 -m venv venv
-          source venv/bin/activate
-          pip install matplotlib
+          julia -e 'ENV["PYTHON"]=""'
+          julia -e 'using Pkg; Pkg.build("PyCall")'
+          julia -e 'using Conda; Conda.add("matplotlib")'
       - name: Configure doc environment
         shell: julia --project=docs --color=yes {0}
         run: |
