--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -58,6 +58,7 @@ jobs:
       - uses: julia-actions/cache@v2
       - name: Install Python dependencies for PyCall
         run: |
+          julia -e 'using Pkg; Pkg.add("PyCall")'
           julia -e 'ENV["PYTHON"]=""'
           julia -e 'using Pkg; Pkg.build("PyCall")'
           julia -e 'using Conda; Conda.add("matplotlib")'
