--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -56,13 +56,11 @@ jobs:
         with:
           version: '1'
       - uses: julia-actions/cache@v2
-      - name: Install Python dependencies for PyCall
+      - name: Install Python dependencies
         run: |
-          julia -e 'using Pkg; Pkg.add("PyCall")'
-          julia -e 'using Pkg; Pkg.add("Conda")'
-          julia -e 'ENV["PYTHON"]=""'
-          julia -e 'using Pkg; Pkg.build("PyCall")'
-          julia -e 'using Conda; Conda.add("matplotlib")'
+          sudo apt-get update
+          sudo apt-get install python3-pip
+          sudo apt-get install python3-matplotlib
       - name: Configure doc environment
         shell: julia --project=docs --color=yes {0}
         run: |
