--- a/Project.toml
+++ b/Project.toml
@@ -21,6 +21,7 @@ PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
@@ -42,6 +43,7 @@ PyPlot = "2 - 3"
 QuadGK = "2 - 3"
 Random = "1 - 2"
 Revise = "3 - 4"
+Serialization = "1.11.0"
 SparseArrays = "1 - 2"
 Statistics = "1 - 2"
 julia = "1.9"
