--- a/Project.toml
+++ b/Project.toml
@@ -25,25 +25,20 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
-BenchmarkTools = "1 - 2"
-ColorSchemes = "3 - 4"
-DelimitedFiles = "1 - 2"
-FFTW = "1 - 2"
-FiniteDifferences = "0.12, 1"
-ForwardDiff = "0.10, 1"
-GR = "0.73, 1"
-Interpolations = "0.15.1"
-LinearAlgebra = "1 - 2"
-LinearInterpolations = "0.1, 1"
-Parameters = "0.12, 1"
-PlotlyJS = "0.18.15"
-Plots = "1 - 2"
-PyPlot = "2 - 3"
-QuadGK = "2 - 3"
-Random = "1 - 2"
-Revise = "3 - 4"
-SparseArrays = "1 - 2"
-Statistics = "1 - 2"
+BenchmarkTools = "^1"
+ColorSchemes = "^3"
+FFTW = "^1"
+FiniteDifferences = "^1"
+ForwardDiff = "^1"
+GR = "^0.73"                 
+Interpolations = "^0.15.1"
+LinearInterpolations = "^0.1"
+Parameters = "^0.12"
+PlotlyJS = "^0.18.15"
+Plots = "^1"
+PyPlot = "^2"
+QuadGK = "^2"
+Revise = "^3"
 julia = "1.9"
 
 [extras]
