--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -43,6 +43,9 @@ jobs:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
       - uses: julia-actions/cache@v2
+      - name: Remove stale Manifest.toml (if any)
+        run: |
+          rm -f Manifest.toml
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
       - uses: julia-actions/julia-processcoverage@v1
@@ -72,6 +75,9 @@ jobs:
         with:
           version: '1.9'
       - uses: julia-actions/cache@v2
+      - name: Remove stale Manifest.toml (if any)
+        run: |
+          rm -f Manifest.toml
       - name: Install Python dependencies
         run: |
           sudo apt-get update
