--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,7 +15,6 @@ jobs:
   test:
     name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
     runs-on: ${{ matrix.os }}
-    timeout-minutes: 120
     permissions: # needed to allow julia-actions/cache to proactively delete old caches that it has created
       actions: write
       contents: read
@@ -23,9 +22,9 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - '1.9'
+          - '1.11'
         os:
-          - ubuntu-latest
+          - macos-latest
         arch:
           - x64
     steps:
@@ -36,7 +35,10 @@ jobs:
           arch: ${{ matrix.arch }}
       - uses: julia-actions/cache@v2
       - uses: julia-actions/julia-buildpkg@v1
-      - uses: julia-actions/julia-runtest@v1
+      - name: Run tests with optimizations
+        shell: bash
+        run: |
+          julia --project=. --check-bounds=no -O3 --color=yes -e 'using Pkg; Pkg.test()'
       - uses: julia-actions/julia-processcoverage@v1
       - name: Upload coverage data to Codecov
         uses: codecov/codecov-action@v5
@@ -45,7 +47,7 @@ jobs:
           files: lcov.info   
   docs:
     name: Documentation
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     permissions:
       actions: write # needed to allow julia-actions/cache to proactively delete old caches that it has created
       contents: write
@@ -54,7 +56,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: julia-actions/setup-julia@v2
         with:
-          version: '1.9'
+          version: '1.11'
       - uses: julia-actions/cache@v2
       - name: Install Python dependencies
         run: |
