--- a/Project.toml
+++ b/Project.toml
@@ -33,7 +33,7 @@ FFTW = "^1"
 FiniteDifferences = "^0.12"
 ForwardDiff = "^1"
 GR = "^0.73"
-Hungarian = "0.7.0"
+Hungarian = "^0.7.0"
 Interpolations = "^0.15.1"
 JLD2 = "^0.5"
 LinearInterpolations = "^0.1"
