--- a/Project.toml
+++ b/Project.toml
@@ -34,7 +34,7 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 [compat]
 BenchmarkTools = "^1"
 ColorSchemes = "^3"
-DSP = "^0.8"
+DSP = "0.7, 0.8"
 Dierckx = "^0.5.4"
 FFTW = "^1"
 FiniteDifferences = "^0.12"
